--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ html {
 }
 
 body {
-	background: $purple;
-  font: 12px/1.4 $courier new;
+	background: $white;
+  font: 12px/1.4 $couriernew;
   color: $darkGray;
 }
 
